--- a/templates/conventions/step9.html
+++ b/templates/conventions/step9.html
@@ -17,7 +17,7 @@
             <label class="fr-label" for="{{form.comments.id_for_label}}">
               Ajoutez vos commentaires à l'attention de l'instructeur
             </label>
-            {% include "common/form/input_text.html" with form_input=form.comments rows=10 %}
+            {% include "common/form/input_textarea.html" with form_input=form.comments rows=10 %}
           </div>
         </div>
       </div>
